Fixed wrapping text

--- a/styles.css
+++ b/styles.css
@@ -6,17 +6,20 @@ body   {
 	font: 100 14px Heltetica, Arial, sans-serif;
 }
 
+figure, figcaption {
+        display: block;
+        font-style: italic;
+        font-variant: small-caps;
+        text-align: center;
+}
+
 p {
 	align: justify;
+        overflow: hidden;
 }
 
 figure img {
     vertical-align: top;
-}
-
-figure figcaption {
-    border: 1px dotted blue;
-    text-align: center;
 }
 
 h1 {	
